--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.4.4"
+  },
+  "scripts": {},
+  "devDependencies": {
+    "concurrently": "^7.0.0"
   }
 }
